apport (0.70) UNRELEASED; urgency=low

  * bin/apport-retrace: Add option --remove-tag to remove a Launchpad bug
    tag. This is intended for an automatic Malone crash retracing system.
  * debian/control: Bump python-launchpad-bugs dependency to ensure that we
    have Bug.[gs]et_metadata().
  * man/apport-retrace.1: Add documentation for --confirm and --remove-tag.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 20 Mar 2007 10:51:12 +0100

apport (0.69) feisty; urgency=low

  * apport-chroot: Add command 'installdeb' to conveniently install a bunch of
    .debs into a chroot.
  * apport-chroot: Fix 'login' and 'upgrade' commands to not require
    specifying a chroot map when giving a chroot tarball path as argument.
  * test-apport: Check that core dumps are written for packaged programs as
    well, if ulimits want them. (Test for #92029)
  * bin/apport: Call write_user_coredump() for packaged program crashes and
    SIGABRT as well. (LP: #92029)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Mar 2007 17:37:23 +0100

apport (0.68) feisty; urgency=low

  [ Michael Hofmann ]
  * qt4/apport-qt: Fix taskbar entry, remove an unused method.
  * qt4/error.ui: Fix icon spacing.

  [ Martin Pitt ]
  * apport-retrace: Add option --confirm to display the retraced stack traces
    and ask for confirmation before uploading them as LP bug attachments.
    (LP: #91878)
  * apport-chroot: Add option --confirm-attach; if given, call apport-retrace
    with --confirm.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 15 Mar 2007 00:05:18 +0100

apport (0.67) feisty; urgency=low

  * debian/local/setup-apport-retracer: Add apt sources for restricted,
    universe, and multiverse, too.
  * po/de.po: Update from Rosetta.
  * apport/report.py: Remove undefined call to error_log() in
    _command_output(), replace it with raising proper exceptions.
  * bin/apport-retrace: Fix 'numer' typo. (LP: #91680)
  * test-apport: Check that non-packaged executables generate a core dump on